# lightpool-clob-index

./: .env.example  Cargo.toml  README.md
src/: book_hydrate.rs  config.rs  error.rs  main.rs  mempool_client.rs  slug.rs  spot_market.rs  state.rs  submit_queue.rs  submit_wait.rs
src/chain/: mod.rs
src/domain/: book.rs  market.rs  mod.rs  order.rs
src/http/: mod.rs
src/http/models/: accounts.rs  markets.rs  mod.rs  orders.rs  spot.rs  tx.rs
src/http/process/: book.rs  markets.rs  mod.rs
src/http/routes/: accounts.rs  health.rs  markets.rs  mod.rs  orders.rs  spot.rs  tx.rs
src/indexer/: book_store.rs  mod.rs  processor.rs  store.rs
src/models/: mod.rs
src/routes/: accounts.rs  health.rs  markets.rs  mod.rs  orders.rs  spot.rs  tx.rs  ws.rs
src/ws/: mod.rs
src/ws/models/: mod.rs  orderbook.rs  quote.rs  request.rs  user.rs
src/ws/process/: mod.rs  orderbook.rs  quote.rs  session.rs  user.rs  user_hub.rs
