[workspace]

[package]
name = "lightpool-clob-index"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.96.0"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tokio = { version = "1.5.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.21"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
bincode = "1.3"
hex = "0.4"
bytes = "1"
dashmap = "5"
tokio-util = { version = "0.7", features = ["codec"] }

lightpool-sdk = { path = "../../crates/lightpool-sdk" }
